--- a/testimonial.html
+++ b/testimonial.html
@@ -8,11 +8,6 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <!-- Favicons -->
-    <!----<link href="img/favicon.png" rel="icon">
-    <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-    ----->
-
     <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i"
@@ -75,49 +70,46 @@
     <!-- Topbar End -->
 
     <!-- Navbar Start -->
-    <div class="container-fluid p-0">
-        <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-            <div class="navbar-brand" style="background-color: rgba(27, 15, 96, 0.864);">
-                <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
-            </div>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
-                <div class="navbar-nav mx-auto py-0">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="services.html" class="nav-item nav-link">Services</a>
-                    <a href="course.html" class="nav-item nav-link">Programs</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="gallery.html" class="dropdown-item">Galllery</a>
-                            <a href="team.html" class="dropdown-item">Team</a>
-                            <a href="contact.html" class="dropdown-item">Contact</a>
-                        </div>
-                    </div>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Universities</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="detail.html" class="dropdown-item">Napal Univesity</a>
-                            <a href="feature.html" class="dropdown-item">Chandigarh Univesity</a>
-                            <a href="team.html" class="dropdown-item">Punjab University</a>
-                            <a href="detail.html" class="dropdown-item">Delhi Univesity</a>
-                            <a href="detail.html" class="dropdown-item">Kolkata Univesity</a>
-                            <a href="detail.html" class="dropdown-item">Goa University</a>
-                        </div>
-                    </div>
-                    <a href="blog.html" class="nav-item nav-link">Blog</a>
-                    <a href="#" class="nav-item nav-link d-none d-lg-block">
-                        <i class="fa fa-search"></i>
+    <nav class="fh5co-nav" role="navigation">
+		<div class="top-menu">
+			<div class="container">
+				<div class="row">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="images/logo.png" alt="" />
+                        <div id="fh5co-logo"><a href="index.html">Mtendere<span>Consult.Edu</span></a></div>
                     </a>
-                </div>
-                <a href="login.html" class="btn btn-primary py-2 px-4 d-none d-lg-block">Login</a>
-            </div>
-        </nav>
-    </div>
-    <!-- Navbar End -->
+					<div class="col-xs-11 text-right menu-1">
+						<ul>
+							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="scholarships.html">Scholarships</a></li>
+							<li class="has-dropdown">
+								<a href="blog.html">Blog</a>
+								<ul class="dropdown">
+									<li><a href="#">Web Design</a></li>
+									<li><a href="#">eCommerce</a></li>
+									<li><a href="#">Branding</a></li>
+									<li><a href="#">API</a></li>
+								</ul>
+							</li>
+                            <li class="has-dropdown">
+								<a href="blog.html">More</a>
+								<ul class="dropdown">
+									<li><a href="#">Gallery</a></li>
+									<li><a href="#">Faculty</a></li>
+									<li><a href="#">Team</a></li>
+                                    <li><a href="#">Pricing</a></li>
+
+								</ul>
+							</li>
+							<li><a href="contact.html">Contact</a></li>
+							<li class="btn-cta"><a href="#"><span>Login</span></a></li>
+						</ul>
+					</div>
+				</div>
+				
+			</div>
+		</div>
+	</nav>
 
 
     <!-- Header Start -->
