--- a/blog-details.html
+++ b/blog-details.html
@@ -9,7 +9,9 @@
     <meta content="" name="description">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i"
+        rel="stylesheet">
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -68,46 +70,46 @@
     <!-- Topbar End -->
 
     <!-- Navbar Start -->
-    <div class="container-fluid p-0">
-        <nav class="navbar navbar-expand-lg bg-white navbar-light py-3 py-lg-0 px-lg-5">
-            <div class="navbar-brand" style="background-color: rgba(27, 15, 96, 0.864);">
-                <a href="#body"><img src="img/Mtendere_logo.png" alt="placeholder" title="Mtendere_logo" /></a>
-            </div>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse justify-content-between px-lg-3" id="navbarCollapse">
-                <div class="navbar-nav mx-auto py-0">
-                    <a href="index.html" class="nav-item nav-link active">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="service.html" class="nav-item nav-link">Services</a>
-                    <a href="course.html" class="nav-item nav-link">Programs</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">More</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="gallery.html" class="dropdown-item">Galllery</a>
-                            <a href="team.html" class="dropdown-item">Team</a>
-                            <a href="contact.html" class="dropdown-item">Contact</a>
-                        </div>
-                    </div>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Universities</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="Napal.html" class="dropdown-item">Napal Univesity</a>
-                            <a href="Chandigarh.html" class="dropdown-item">Chandigarh Univesity</a>
-                            <a href="punjab.html" class="dropdown-item">Punjab University</a>
-                            <a href="delhi.html" class="dropdown-item">Delhi Univesity</a>
-                            <a href="kolkata.html" class="dropdown-item">Kolkata Univesity</a>
-                            <a href="goa.html" class="dropdown-item">Goa University</a>
-                        </div>
-                    </div>
-                    <a href="blog.html" class="nav-item nav-link">Blog</a>
-                    <a href="event.html" class="nav-item nav-link">Events</a>
-                </div>
-            </div>
-        </nav>
-    </div>
-    <!-- Navbar End -->
+    <nav class="fh5co-nav" role="navigation">
+		<div class="top-menu">
+			<div class="container">
+				<div class="row">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="images/logo.png" alt="" />
+                        <div id="fh5co-logo"><a href="index.html">Mtendere<span>Consult.Edu</span></a></div>
+                    </a>
+					<div class="col-xs-11 text-right menu-1">
+						<ul>
+							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="scholarships.html">Scholarships</a></li>
+							<li class="has-dropdown">
+								<a href="blog.html">Blog</a>
+								<ul class="dropdown">
+									<li><a href="#">Web Design</a></li>
+									<li><a href="#">eCommerce</a></li>
+									<li><a href="#">Branding</a></li>
+									<li><a href="#">API</a></li>
+								</ul>
+							</li>
+                            <li class="has-dropdown">
+								<a href="blog.html">More</a>
+								<ul class="dropdown">
+									<li><a href="#">Gallery</a></li>
+									<li><a href="#">Faculty</a></li>
+									<li><a href="#">Team</a></li>
+                                    <li><a href="#">Pricing</a></li>
+
+								</ul>
+							</li>
+							<li><a href="contact.html">Contact</a></li>
+							<li class="btn-cta"><a href="#"><span>Login</span></a></li>
+						</ul>
+					</div>
+				</div>
+				
+			</div>
+		</div>
+	</nav>
 
     <section class="header-detail responsive-wrapper">
         <div class="header-left">
@@ -408,103 +410,6 @@
     </div>
 
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
-
-    <section id="chatbox" class="ai">
-        <input type="checkbox" id="click">
-        <label for="click">
-            <i class="fab fa-facebook-messenger"></i>
-            <i class="fas fa-times"></i>
-        </label>
-        <div class="wrapper">
-            <div class="head-text">
-                ChatBot - Online
-            </div>
-            <div class="chat-box">
-                <div class="desc-text">
-                    Kindly complete the form below to begin chatting with our ai model and our next available agent.
-                </div>
-                <form action="#">
-                    <div class="field">
-                        <input type="text" placeholder="Your Name" required>
-                    </div>
-                    <div class="field">
-                        <input type="email" placeholder="Email Address" required>
-                    </div>
-                    <div class="field textarea">
-                        <textarea cols="30" rows="10" placeholder="Explain your queries.." required></textarea>
-                    </div>
-                    <div class="field" data-toggle="modal" data-target="#myModal">
-                        <a href="#myModal" class="btn">
-                            <button type="submit">Chat</button></a>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </section>
-
-    <!-- Modal -->
-    <!---
-    <section id="chatbox" class="ai">
-        <input type="checkbox" id="click">
-        <label for="click">
-            <i class="fab fa-facebook-messenger"></i>
-            <i class="fas fa-times"></i>
-        </label>
-        <div class="wrapper">
-            <div id="myModal">
-                <div class="modal-sm" class="modal fade" role="dialog">
-                    <div class="modal-dialog">
-                        Modal content
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <div class="header-modal">
-                                    <div>
-                                        <h2>JavaScript ChatBot</h2>
-                                        <p class="typing">bot is typing. . .</p>
-                                    </div>
-                                    <div id="toogle-chat">
-                                        <img src="https://javascript-chatbot.vercel.app/src/images/chat_icon.png"
-                                            class="suggest-chat">
-                                    </div>
-                                </div>
-                                <div class="main-modal">
-                                </div>
-                                <div class="main-background">
-                                    <div>
-                                        <h3>JavaScript ChatBot</h3>
-                                        <p>Click on Top Right button to view all available chats.</p>
-                                    </div>
-                                </div>
-                                <div class="all-questions">
-                                    <h2>Suggested Chats</h2>
-                                    <div class="questions container"></div>
-                                </div>
-
-                                Footer Start 
-                                <div class="footer-modal">
-                                    <form id="chat-form">
-                                        <input type="text" class="chat-input" required>
-                                        <button type="submit" class="chat-submit"><svg
-                                                xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                                viewBox="0 0 24 24">
-                                                <path
-                                                    d="M24 0l-6 22-8.129-7.239 7.802-8.234-10.458 7.227-7.215-1.754 24-12zm-15 16.668v7.332l3.258-4.431-3.258-2.901z" />
-                                            </svg>
-                                        </button>
-                                    </form>
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    ---->
 
     <!-- JavaScript Libraries -->
     <script src="lib/jquery/jquery.min.js"></script>
