--- a/testimonial.html
+++ b/testimonial.html
@@ -75,7 +75,7 @@
 			<div class="container">
 				<div class="row">
                     <a class="navbar-brand" href="index.html">
-                        <img src="images/logo.png" alt="" />
+                        <img src="img/Mtendere_logo.png" alt="" />
                         <div id="fh5co-logo"><a href="index.html">Mtendere<span>Consult.Edu</span></a></div>
                     </a>
 					<div class="col-xs-11 text-right menu-1">
