--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 		<div class="top-menu">
 			<div class="container">
 				<div class="row">
-                    <a class="navbar-brand" href="index.html">
-                        <img src="images/logo.png" alt="" />
-                        <div id="fh5co-logo"><a href="index.html">Mtendere<span>Consult.Edu</span></a></div>
-                    </a>
 					<div class="col-xs-11 text-right menu-1">
+                        <a class="navbar-brand" href="index.html">
+                            <img src="img/Mtendere_logo.png" alt="" />
+                            <div id="fh5co-logo"><a href="index.html">Mtendere<span>Consult.Edu</span></a></div>
+                        </a>
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="scholarships.html">Scholarships</a></li>
@@ -91,7 +91,6 @@
 									<li><a href="#">API</a></li>
 								</ul>
 							</li>
-<<<<<<< HEAD
                             <li class="has-dropdown">
 								<a href="blog.html">More</a>
 								<ul class="dropdown">
@@ -102,9 +101,6 @@
 
 								</ul>
 							</li>
-=======
-
->>>>>>> 1fe87f70abc34b8e9b87ac847edf256addd2e8b3
 							<li><a href="contact.html">Contact</a></li>
 							<li class="btn-cta"><a href="#"><span>Login</span></a></li>
 						</ul>
@@ -444,50 +440,45 @@
 		</div>
 	</div>
 
-    <div id="quote" class="container">
-        <div class="box">
-            <i class='fas fa-quote-left fa2'></i> 
-            <div class="text">
-                <i class='fas fa-quote-right fa1'></i>
-                <div>
-                    <h3> Quote the day</h3>
-                    <p></p>
-                    <div class="author-info">
-                        <h5>Author's Name</h5>
-                        <p>City, State, Country</p>
-                    </div>
+    <div class="box">
+        <i class='fas fa-quote-left fa2'></i> 
+        <div class="text">
+            <i class='fas fa-quote-right fa1'></i>
+            <div>
+                <h3> Quote the day</h3>
+                <p></p>
+                <div class="author-info">
+                    <h5>Author's Name</h5>
+                    <p>City, State, Country</p>
                 </div>
             </div>
         </div>
     </div>
 
-
     <!---- Take Eligibility Test --->
-    <section id="test" class="container-fluid">
-        <div class="row">
-            <div class="frame">
-                <div class="circle"></div>
-                <div class="line left"></div>
-                <div class="line right"></div>
-                <div class="bracket left"></div>
-                <div class="bracket right"></div>
-                <div class="small top"><span class="first-letter">T</span>ake</div>
-                <div class="big">Test</div>
-                <div class="small bottom">& Achieve <span class="first-letter">I</span>nternatiol Studies</div>
-                <div class="hide top"></div>
-                <div class="hide bottom"></div>
-            </div>
-            <div class="col-md-6">
-                <div class="card card-custom bg-white border-white border-0">
-                    <div class="card-body">
-                        <h3 class="card-title">Test your eligibility for International Studies</h3>
-                        <p class="card-text">We offer a variety of tests to help you determine if you are eligible for our program. Each test has its own requirements and time limit.</p>
-                        <a href="#" class="btn btn-primary">Start Test</a>
-                    </div>
+    <div class="row">
+        <div class="frame col-md-6">
+            <div class="circle"></div>
+            <div class="line left"></div>
+            <div class="line right"></div>
+            <div class="bracket left"></div>
+            <div class="bracket right"></div>
+            <div class="small top"><span class="first-letter">T</span>ake</div>
+            <div class="big">Test</div>
+            <div class="small bottom">& Achieve <span class="first-letter">I</span>nternatiol Studies</div>
+            <div class="hide top"></div>
+            <div class="hide bottom"></div>
+        </div>
+        <div class="col-md-6">
+            <div class="card card-custom bg-white border-white border-0">
+                <div class="card-body">
+                    <h3 class="card-title">Test your eligibility for International Studies</h3>
+                    <p class="card-text">We offer a variety of tests to help you determine if you are eligible for our program. Each test has its own requirements and time limit.</p>
+                    <a href="#" class="btn btn-primary">Start Test</a>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
 
     <!--  Blog Section -->
     <section id="blog" class="container xxl col-md-16">
