--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		</div>
 	</nav>
 
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/img_bg_1.jpg);" data-stellar-background-ratio="0.5">
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(img/Madam\ Brenda\ with\ Students.jpg);" data-stellar-background-ratio="0.5">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
@@ -440,45 +440,68 @@
 		</div>
 	</div>
 
-    <div class="box">
-        <i class='fas fa-quote-left fa2'></i> 
-        <div class="text">
-            <i class='fas fa-quote-right fa1'></i>
-            <div>
-                <h3> Quote the day</h3>
-                <p></p>
-                <div class="author-info">
-                    <h5>Author's Name</h5>
-                    <p>City, State, Country</p>
+    <section id="blog" class="container xxl col-md-16">
+        <div class="pb-5">
+            <div class="row g-4 align-items-end">
+                <div class="col-xl-8">
+                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Blog</h4>
+                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Our Latest Blogs </h1>
+                </div>
+                <div class="box">
+                    <i class='fas fa-quote-left fa2'></i> 
+                    <div class="text">
+                        <i class='fas fa-quote-right fa1'></i>
+                        <div>
+                            <h3> Quote the day</h3>
+                            <p></p>
+                            <div class="author-info">
+                                <h5>Author's Name</h5>
+                                <p>City, State, Country</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!---- Take Eligibility Test --->
-    <div class="row">
-        <div class="frame col-md-6">
-            <div class="circle"></div>
-            <div class="line left"></div>
-            <div class="line right"></div>
-            <div class="bracket left"></div>
-            <div class="bracket right"></div>
-            <div class="small top"><span class="first-letter">T</span>ake</div>
-            <div class="big">Test</div>
-            <div class="small bottom">& Achieve <span class="first-letter">I</span>nternatiol Studies</div>
-            <div class="hide top"></div>
-            <div class="hide bottom"></div>
-        </div>
-        <div class="col-md-6">
-            <div class="card card-custom bg-white border-white border-0">
-                <div class="card-body">
-                    <h3 class="card-title">Test your eligibility for International Studies</h3>
-                    <p class="card-text">We offer a variety of tests to help you determine if you are eligible for our program. Each test has its own requirements and time limit.</p>
-                    <a href="#" class="btn btn-primary">Start Test</a>
+    <!--  Blog Section -->
+    <section id="blog" class="container xxl col-md-16">
+        <div class="pb-5">
+            <div class="row g-4 align-items-end">
+                <div class="col-xl-8">
+                    <h4 class="text-secondary sub-title fw-bold wow fadeInUp" data-wow-delay="0.1s">Blog</h4>
+                    <h1 class="display-2 mb-0 wow fadeInUp" data-wow-delay="0.3s">Our Latest Blogs </h1>
+                </div>
+                <div class="row">
+                    <div class="frame col-md-6">
+                        <div class="circle"></div>
+                        <div class="line left"></div>
+                        <div class="line right"></div>
+                        <div class="bracket left"></div>
+                        <div class="bracket right"></div>
+                        <div class="small top"><span class="first-letter">T</span>ake</div>
+                        <div class="big">Test</div>
+                        <div class="small bottom">& Achieve <span class="first-letter">I</span>nternatiol Studies</div>
+                        <div class="hide top"></div>
+                        <div class="hide bottom"></div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card card-custom bg-white border-white border-0">
+                            <div class="card-body">
+                                <h3 class="card-title">Test your eligibility for International Studies</h3>
+                                <p class="card-text">We offer a variety of tests to help you determine if you are eligible for our program. Each test has its own requirements and time limit.</p>
+                                <a href="#" class="btn btn-primary">Start Test</a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+    <!---- End Take Eligibility Test --->
+    
 
     <!--  Blog Section -->
     <section id="blog" class="container xxl col-md-16">
