--- a/index.html
+++ b/index.html
@@ -75,15 +75,13 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-11 text-right menu-1">
-                        <a class="navbar-brand" href="index.html">
-                            <img src="img/Mtendere_logo.png" alt="" />
-                            <div id="fh5co-logo"><a href="index.html">Mtendere<span>Consult.Edu</span></a></div>
-                        </a>
+                        <div id="fh5co-logo"><a href="index.html">
+                            <img src="img/Mtendere_logo.png" alt="" />  
+                            Mtendere<span>Consult.Edu</span></a></div>
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="scholarships.html">Scholarships</a></li>
-							<li class="has-dropdown">
-								<a href="blog.html">Blog</a>
+							<li class="has-dropdown">Blog
 								<ul class="dropdown">
 									<li><a href="#">Web Design</a></li>
 									<li><a href="#">eCommerce</a></li>
@@ -91,14 +89,12 @@
 									<li><a href="#">API</a></li>
 								</ul>
 							</li>
-                            <li class="has-dropdown">
-								<a href="blog.html">More</a>
+                            <li class="has-dropdown">More
 								<ul class="dropdown">
-									<li><a href="#">Gallery</a></li>
 									<li><a href="#">Faculty</a></li>
-									<li><a href="#">Team</a></li>
+									<li><a href="#">Partners</a></li>
                                     <li><a href="#">Pricing</a></li>
-
+                                    <li><a href="#">Gallery</a></li>
 								</ul>
 							</li>
 							<li><a href="contact.html">Contact</a></li>
@@ -106,7 +102,6 @@
 						</ul>
 					</div>
 				</div>
-				
 			</div>
 		</div>
 	</nav>
@@ -137,7 +132,7 @@
 				</div>
 				<div class="col-md-3 text-center animate-box">
 					<span class="fh5co-counter js-counter" data-from="0" data-to="30290" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Courses</span>
+					<span class="fh5co-counter-label">Programs</span>
 				</div>
 				<div class="col-md-3 text-center animate-box">
 					<span class="fh5co-counter js-counter" data-from="0" data-to="2039" data-speed="5000" data-refresh-interval="50"></span>
@@ -145,7 +140,7 @@
 				</div>
 				<div class="col-md-3 text-center animate-box">
 					<span class="fh5co-counter js-counter" data-from="0" data-to="997585" data-speed="5000" data-refresh-interval="50"></span>
-					<span class="fh5co-counter-label">Earnings</span>
+					<span class="fh5co-counter-label">University</span>
 				</div>
 			</div>
 		</div>
@@ -155,8 +150,10 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Take A Course</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+					<h2>Apply Today</h2>
+					<p>
+                        We are here to help you with your application process. We have a team of experts who can guide you through the entire process, from start to finish. Whether you need help with your application, your visa, or your accommodation, we are here to help.    
+                    </p>
 				</div>
 			</div>
 		</div>		
@@ -164,18 +161,26 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-push-5 animate-box">
-						<img class="img-responsive" src="images/work_1.png" alt="work">
+						<img class="img-responsive" src="img/young-adults-meeting-up-study.jpg" alt="work">
 					</div>
 					<div class="col-md-4 col-md-pull-8 animate-box">
 						<div class="mt">
-							<h3>We Want You To Learn English</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+							<h3>We Want You To Study Abroad</h3>
+							<p>
+                                We are here to serve with affordable abroad education, scholarships, and visa processing. We have a team of experts who can guide you through the entire process, from start to finish. Whether you need help with your application, your visa, or your accommodation, we are here to help.
+                            </p>
 							<ul class="list-nav">
-								<li><i class="icon-check2"></i>Far far away, behind the word</li>
-								<li><i class="icon-check2"></i>There live the blind texts</li>
-								<li><i class="icon-check2"></i>Separated they live in bookmarksgrove</li>
+								<li><i class="icon-check2"></i>
+                                    Application process
+                                </li>
+								<li><i class="icon-check2"></i>
+                                    Visa process
+                                </li>
+								<li><i class="icon-check2"></i>
+                                    Accommodation process
+                                </li>
 							</ul>
-							<p><a class="btn btn-primary btn-lg popup-vimeo btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Watch Video</a></p>
+							<p><a class="btn btn-primary btn-lg popup-vimeo btn-video" href="#"><i class="icon-play"></i> Watch Video</a></p>
 						</div>
 					</div>
 				</div>
@@ -186,7 +191,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-pull-1 animate-box">
-						<img class="img-responsive" src="images/work_1.png" alt="work">
+						<img class="img-responsive" src="img/study-group-african-people.jpg" alt="work">
 					</div>
 					<div class="col-md-4 animate-box">
 						<div class="mt">
@@ -501,7 +506,7 @@
         </div>
     </section>
     <!---- End Take Eligibility Test --->
-    
+
 
     <!--  Blog Section -->
     <section id="blog" class="container xxl col-md-16">
