--- a/index.html
+++ b/index.html
@@ -74,19 +74,52 @@
 		<div class="top-menu">
 			<div class="container">
 				<div class="row">
-					<div class="col-xs-11 text-right menu-1">
+					<div class="col-xs-11 menu-1">
                         <div id="fh5co-logo"><a href="index.html">
                             <img src="img/Mtendere_logo.png" alt="" />  
-                            Mtendere<span>Consult.Edu</span></a></div>
+                            Mtendere<span>Consult.Edu</span></a>
+                        </div>
 						<ul>
 							<li class="active"><a href="index.html">Home</a></li>
 							<li><a href="scholarships.html">Scholarships</a></li>
-							<li class="has-dropdown">Blog
+							<li class="has-dropdown">University
 								<ul class="dropdown">
-									<li><a href="#">Web Design</a></li>
-									<li><a href="#">eCommerce</a></li>
-									<li><a href="#">Branding</a></li>
-									<li><a href="#">API</a></li>
+									<li><a href="#">Chandigarh University</a></li>
+									<li><a href="#">Parul University</a></li>
+									<li><a href="#">CT University</a></li>
+                                    <li><a href="#">Shoolin University</a></li>
+                                    <li><a href="#">Jain University</a></li>
+                                    <li><a href="#">Royal Global University</a></li>
+                                    <li><a href="#">Symboisis University</a></li>
+                                    <li><a href="#">Galgocia University</a></li>
+                                    <li><a href="#">Noida University</a></li>
+                                    <li><a href="#">Khalsa College</a></li>
+                                    <li><a href="#">Lovey Professional University</a></li>
+									<li class="has-dropdown"><a href="#">Gedu Global</a>
+                                        <ul class="dropdown">
+                                            <li><a href="#">GBS Dubai</a></li>
+                                            <li><a href="#">St Julians</a></li>
+                                            <li><a href="#">Plymouth, MLA College</a></li>
+                                            <li><a href="#">Schiller International University</a></li>
+                                            <li><a href="#">Ecole de Management EMA</a></li>
+                                            <li><a href="#">Austrtian Perfoming Arts Conservatory</a></li>
+                                            <li><a href="#">Cyprus International University</a></li>
+                                            <li><a href="#">Cyprus West University</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="has-dropdown"><a href="#">MSM Unify</a>
+                                        <ul class="dropdown">
+                                            <li><a href="#">University of Niagara Faals</a></li>
+                                            <li><a href="#">University of Victoria</a></li>
+                                            <li><a href="#">Kwantlen</a></li>
+                                            <li><a href="#">University of Wolverhampton</a></li>
+                                            <li><a href="#">Webster University</a></li>
+                                            <li><a href="#">Dublin College</a></li>
+                                            <li><a href="#">Seatle Central College</a></li>
+                                            <li><a href="#">Thompson Rivers University</a></li>
+                                            <li><a href="#">University of Greenwish</a></li>
+                                        </ul>
+                                    </li>
 								</ul>
 							</li>
                             <li class="has-dropdown">More
@@ -115,7 +148,7 @@
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
 							<h1>The Art of Teaching is the Art of Assisting Discovery</h1>
 							<h2>Mtendere Education<a href="" target="_blank">.Consult</a></h2>
-							<p><a class="btn btn-primary btn-lg btn-learn" href="#">Take A Course</a> <a class="btn btn-primary btn-lg popup-vimeo btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Watch Video</a></p>
+							<p><a class="btn btn-primary btn-lg btn-learn" href="#">Apply Now!</a> <a class="btn btn-primary btn-lg popup-vimeo btn-video" href="https://vimeo.com/channels/staffpicks/93951774"><i class="icon-play"></i> Watch Video</a></p>
 						</div>
 					</div>
 				</div>
@@ -160,11 +193,11 @@
 		<div class="fh5co-explore fh5co-explore1">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-8 col-md-push-5 animate-box">
-						<img class="img-responsive" src="img/young-adults-meeting-up-study.jpg" alt="work">
-					</div>
 					<div class="col-md-4 col-md-pull-8 animate-box">
 						<div class="mt">
+                            <div class="col-md-8 col-md-push-5 animate-box">
+                                <img class="img-responsive" src="img/young-adults-meeting-up-study.jpg" alt="work">
+                            </div>
 							<h3>We Want You To Study Abroad</h3>
 							<p>
                                 We are here to serve with affordable abroad education, scholarships, and visa processing. We have a team of experts who can guide you through the entire process, from start to finish. Whether you need help with your application, your visa, or your accommodation, we are here to help.
@@ -190,11 +223,12 @@
 		<div class="fh5co-explore">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-8 col-md-pull-1 animate-box">
-						<img class="img-responsive" src="img/study-group-african-people.jpg" alt="work">
-					</div>
+					
 					<div class="col-md-4 animate-box">
 						<div class="mt">
+                            <div class="col-md-8 col-md-pull-1 animate-box">
+                                <img class="img-responsive" src="img/study-group-african-people.jpg" alt="work">
+                            </div>
 							<div>
 								<h4><i class="icon-user"></i>Real Project For Real Solutions</h4>
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia. </p>
