--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
                                     <li><a href="#">Noida University</a></li>
                                     <li><a href="#">Khalsa College</a></li>
                                     <li><a href="#">Lovey Professional University</a></li>
-									<li class="has-dropdown"><a href="#">Gedu Global</a>
+                                </ul>  
+                                <ul class="dropdown"> 
+                                    <li class="has-dropdown"><a href="#">Gedu Global</a>
                                         <ul class="dropdown">
                                             <li><a href="#">GBS Dubai</a></li>
                                             <li><a href="#">St Julians</a></li>
@@ -107,6 +109,8 @@
                                             <li><a href="#">Cyprus West University</a></li>
                                         </ul>
                                     </li>
+                                </ul>
+                                <ul class="dropdown">
                                     <li class="has-dropdown"><a href="#">MSM Unify</a>
                                         <ul class="dropdown">
                                             <li><a href="#">University of Niagara Faals</a></li>
