--- a/index.html
+++ b/index.html
@@ -208,13 +208,13 @@
                             </p>
 							<ul class="list-nav">
 								<li><i class="icon-check2"></i>
-                                    Application process
+                                    Career Counseling and Guidance
                                 </li>
 								<li><i class="icon-check2"></i>
-                                    Visa process
+                                    Tavelling Documents and Visa Assistance
                                 </li>
 								<li><i class="icon-check2"></i>
-                                    Accommodation process
+                                    Admission and Application Process
                                 </li>
 							</ul>
 							<p><a class="btn btn-primary btn-lg popup-vimeo btn-video" href="#"><i class="icon-play"></i> Watch Video</a></p>
@@ -234,15 +234,26 @@
                                 <img class="img-responsive" src="img/study-group-african-people.jpg" alt="work">
                             </div>
 							<div>
-								<h4><i class="icon-user"></i>Real Project For Real Solutions</h4>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia. </p>
+								<h4><i class="icon-user"></i>
+                                    We Want You To Study Abroad
+                                </h4>
+								<p>
+                                    <strong>We are here to help you with your application process.</strong>
+                                    We have a team of experts who can guide you through the entire process, from start to finish. Whether you need help with your application, your visa, or your accommodation, we are here to help.
+                                </p>
 							</div>
 							<div>
-								<h4><i class="icon-video2"></i>Real Project For Real Solutions</h4>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+								<h4><i class="icon-video2"></i>
+                                    Get the Best Abroad work & Education Opportunities
+                                </h4>
+								<p>
+                                    <strong>We are here to provide you to the best and market leading universities. </strong>
+                                    We have a team of experts who can guide you through the entire process, from start to finish. Whether you need help with your application, your visa, or your accommodation, we are here to help.    
+                                </p>
 							</div>
 							<div>
-								<h4><i class="icon-shield"></i>Real Project For Real Solutions</h4>
+								<h4><i class="icon-shield"></i>0/h4>
+
 								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia. </p>
 							</div>
 						</div>
