--- a/index.html
+++ b/index.html
@@ -252,9 +252,15 @@
                                 </p>
 							</div>
 							<div>
-								<h4><i class="icon-shield"></i>0/h4>
+								<h4><i class="icon-shield"></i>
+                                Unlock doors to success through international education
 
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia. </p>
+                                </h4>
+
+								<p>
+                                    <strong>We are here to help you with your application process.</strong>
+                                    We have a team of experts who can guide you through the entire process, from start to finish. Whether you need help with your application, your visa, or your accommodation, we are here to help.    
+                                </p>
 							</div>
 						</div>
 					</div>
@@ -336,8 +342,10 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Start A Course</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<h2>Take Eligibility Test</h2>
+					<p>
+                        The eligibility test is tool to help you determine if you are eligible for our program. Each test has its own requirements and time limit. We offer a variety of tests to help you determine if you are eligible for our program. Each test has its own requirements and time limit.
+                    </p>
 				</div>
 			</div>
 
@@ -347,28 +355,36 @@
 					<div class="text-center bs-wizard-stepnum"><h4>Step 1</h4></div>
 					<div class="progress"><div class="progress-bar"></div></div>
 					<a href="#" class="bs-wizard-dot"></a>
-					<div class="bs-wizard-info text-center"><p>Create A Free Course</p></div>
+					<div class="bs-wizard-info text-center"><p>
+                        You can take the eligibility test online or in person. The test is designed to assess your knowledge and skills in a variety of areas, including math, reading, and writing. The test is timed, so be sure to manage your time wisely.
+                        </p>
+                    </div>
+                    </p></div>
 				</div>
 
 				<div class="col-xs-3 bs-wizard-step active"><!-- complete -->
 					<div class="text-center bs-wizard-stepnum"><h4>Step 2</h4></div>
 					<div class="progress"><div class="progress-bar"></div></div>
 					<a href="#" class="bs-wizard-dot"></a>
-					<div class="bs-wizard-info text-center"><p>Upload Content</p></div>
+					<div class="bs-wizard-info text-center"><p>Upload Credetials</p></div>
 				</div>
 
 				<div class="col-xs-3 bs-wizard-step disabled"><!-- complete -->
-					<div class="text-center bs-wizard-stepnum"><h4>Step 3</h4></div>
+					<div class="text-center bs-wizard-stepnum"><h4>Step 3
+                    </h4></div>
 					<div class="progress"><div class="progress-bar"></div></div>
 					<a href="#" class="bs-wizard-dot"></a>
-					<div class="bs-wizard-info text-center"><p>Make Your Course Beautiful</p></div>
+					<div class="bs-wizard-info text-center"><p>
+                        After you have completed the test, you will need to fill out a form with your personal information and submit it. This form will be used to determine your eligibility for our program. Once you have submitted the form, you will receive an email with the results of your test.</p></div>
 				</div>
 
 				<div class="col-xs-3 bs-wizard-step disabled"><!-- active -->
 					<div class="text-center bs-wizard-stepnum"><h4>Step 4</h4></div>
 					<div class="progress"><div class="progress-bar"></div></div>
 					<a href="#" class="bs-wizard-dot"></a>
-					<div class="bs-wizard-info text-center"><p>Start Making Money</p></div>
+					<div class="bs-wizard-info text-center"><p>
+                        If you are eligible for our program, you will be contacted by one of our representatives to discuss your options. If you are not eligible, you will receive an email with information on how to improve your score and retake the test.
+                    </p></div>
 				</div>
 			</div>
 
