--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                             alt="Avatar" />
                     </div>
                     <div class="card-body" style="overflow-y: auto">
-                        <h4 class="card-title">Card title</h4>
+                        <h4 class="card-title">Chardi</h4>
                         <p class="card-text">Card has minimum height set but will expand if more space is needed for
                             card body content. You can use Bootstrap <a
                                 href="https://getbootstrap.com/docs/4.0/components/card/#card-decks"
@@ -452,10 +452,12 @@
                         </p>
                         <p class="h5 text-center pt-3">See the card on GitHub:</p>
                         <p class="h1 text-center"><a href="https://github.com/peterdanis/custom-bootstrap-cards"
-                                target="_blank"><i class="fa fa-github"></i></a></p>
+                                target="_blank"><i class="fa fa-github"></i></a>
+                        </p>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
     </section>
 
