--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
-    <!-- Bootstrap css -->
+    <!-- Bootstrap css 
     <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="lib/bootstrap/css/style.min.css" rel="stylesheet">
+    <link href="lib/bootstrap/css/style.min.css" rel="stylesheet">-->
 
 
-    <!-- Libraries CSS Files -->
+    <!-- Libraries CSS Files 
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="lib/owlcarousel/assets/owl.theme.default.min.css" rel="stylesheet">
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/modal-video/css/modal-video.min.css" rel="stylesheet">
+    <link href="lib/modal-video/css/modal-video.min.css" rel="stylesheet">-->
 
     <!-- Main Stylesheet File -->
     <link href="css/style.css" rel="stylesheet">
