--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
     <link href="lib/animate/animate.min.css" rel="stylesheet">
     <link href="lib/modal-video/css/modal-video.min.css" rel="stylesheet">-->
 
+    <!-- Animate.css -->
+	<link rel="stylesheet" href="lib/animate/animate.css">
+	<!-- Icomoon Icon Fonts-->
+    <script src="lib/superfish/superfish.js" crossorigin="anonymous"></script>
+	<!-- Bootstrap  -->
+	<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
+
+	<!-- Magnific Popup -->
+	<script src="lib/wow/wow.js"></script>
+
+	<!-- Owl Carousel  -->
+	<link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.min.css">
+	<link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
+
+	<!-- Modernizr JS -->
+	<script src="js/modernizr-2.6.2.min.js"></script>
+
     <!-- Main Stylesheet File -->
     <link href="css/style.css" rel="stylesheet">
 
