--- a/index.html
+++ b/index.html
@@ -287,59 +287,80 @@
 		</div>
 	</div>
 
-    <!-- Counter Facts Start -->
-    <section class="container-fluid counter-facts py-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.1s">
-                    <div class="counter">
-                        <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Programs</h3>
-                        </div>
-                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
-                            <span class="counter-value" data-toggle="counter-up">158</span>
-                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
-                        </div>
-                    </div>
+    
+    <section class="section lb page-section">
+		<div class="container">
+			<div class="section-title row text-center">
+                <div class="col-md-8 offset-md-2">
+                    <h3>Our history</h3>
+                    <p class="lead">Lorem Ipsum dolroin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem!</p>
                 </div>
-                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="counter">
-                        <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Pro Instructor</h3>
-                        </div>
-                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
-                            <span class="counter-value" data-toggle="counter-up">49</span>
-                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.5s">
-                    <div class="counter">
-                        <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Total Scholarships</h3>
-                        </div>
-                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
-                            <span class="counter-value" data-toggle="counter-up">17</span>
-                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-sm-6 col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="0.7s">
-                    <div class="counter">
-                        <div class="counter-icon w-100 d-flex align-items-center justify-content-center">
-                            <h3>Abroad Students</h3>
-                        </div>
-                        <div class="counter-content d-flex align-items-center justify-content-center mt-4">
-                            <span class="counter-value" data-toggle="counter-up">567</span>
-                            <h4 class="text-secondary mb-0" style="font-weight: 600; font-size: 25px;">+</h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Counter Facts End -->
-
+            </div><!-- end title -->
+			<div class="timeline">
+				<div class="timeline__wrap">
+					<div class="timeline__items">
+						<div class="timeline__item">
+							<div class="timeline__content img-bg-01">
+								<h2>2018</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus. Lorem
+									ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							</div>
+						</div>
+						<div class="timeline__item">
+							<div class="timeline__content img-bg-02">
+								<h2>2015</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus. Lorem
+									ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							</div>
+						</div>
+						<div class="timeline__item">
+							<div class="timeline__content img-bg-03">
+								<h2>2014</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus. Lorem
+									ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							</div>
+						</div>
+						<div class="timeline__item">
+							<div class="timeline__content img-bg-04">
+								<h2>2012</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus. Lorem
+									ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							</div>
+						</div>
+						<div class="timeline__item">
+							<div class="timeline__content img-bg-01">
+								<h2>2010</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus. Lorem
+									ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							</div>
+						</div>
+						<div class="timeline__item">
+							<div class="timeline__content img-bg-02">
+								<h2>2007</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus. Lorem
+									ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							</div>
+						</div>
+						<div class="timeline__item">
+							<div class="timeline__content img-bg-03">
+								<h2>2004</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus. Lorem
+									ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							</div>
+						</div>
+						<div class="timeline__item">
+							<div class="timeline__content img-bg-04">
+								<h2>2002</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer dignissim neque condimentum lacus dapibus. Lorem
+									ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+    
     <!-- Video Section -->
     <section id="video" class="text-center wow fadeInUp">
         <div class="overlay">
