--- a/index.html
+++ b/index.html
@@ -8,49 +8,16 @@
     <meta content="" name="keywords">
     <meta content="" name="description">
 
-    <!-- Google Fonts -->
-    <link
-        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i"
-        rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="fonts/icomoon/style.css">
+    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
+    <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/style.css">
 
-    <!-- Font Awesome -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-
-    <!-- Bootstrap css -->
-    <link href="lib/bootstrap/css/style.min.css" rel="stylesheet">
-    <link href="lib/bootstrap/scss/style.scss" rel="stylesheet">
-    <link href="lib/bootstrap/scss/bootstrap/scss/bootstrap.scss" rel="stylesheet">
-    <link href="lib/bootstrap/css/style.min.css" rel="stylesheet">
-
-
-    <!-- Libraries CSS Files -->
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.theme.default.min.css" rel="stylesheet">
-    <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/modal-video/css/modal-video.min.css" rel="stylesheet">
-
-    <!-- Animate.css -->
-    <link rel="stylesheet" href="lib/animate/animate.css">
-    <!-- Icomoon Icon Fonts-->
-    <script src="lib/superfish/superfish.js" crossorigin="anonymous"></script>
-    <!-- Bootstrap  -->
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
-
-    <!-- Magnific Popup -->
-    <script src="lib/wow/wow.js"></script>
-
-    <!-- Owl Carousel  -->
-    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.carousel.min.css">
-    <link rel="stylesheet" href="lib/owlcarousel/assets/owl.theme.default.min.css">
-
-    <!-- Modernizr JS -->
-    <script src="js/modernizr-2.6.2.min.js"></script>
-
-    <!-- Main Stylesheet File -->
-    <link href="css/style.css" rel="stylesheet">
-
-    <!-- Name: MTENDERE education consultancy -->
 </head>
 
 <body>
@@ -522,7 +489,8 @@
                         <div class="media-h-body">
                             <h2 class="mb-3"><a href="#">Education for Tomorrow's Leaders</a></h2>
                             <div class="meta mb-2"><span class="icon-calendar mr-2"></span><span>June 22, 2020</span>
-                                <span class="icon-person mr-2"></span>Admin</div>
+                                <span class="icon-person mr-2"></span>Admin
+                            </div>
                             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
                                 there live the blind texts.</p>
                             <p><a href="#">Learn More</a></p>
@@ -537,7 +505,8 @@
                         <div class="media-h-body">
                             <h2 class="mb-3"><a href="#">Enroll Your Kids This Summer to get 30% off</a></h2>
                             <div class="meta mb-2"><span class="icon-calendar mr-2"></span><span>June 22, 2020</span>
-                                <span class="icon-person mr-2"></span>Admin</div>
+                                <span class="icon-person mr-2"></span>Admin
+                            </div>
                             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia,
                                 there live the blind texts.</p>
                             <p><a href="#">Learn More</a></p>
